Fixed sticky bar on family tree page, also fixed images that were not responsive in main pages and centered buttons

--- a/static/css/dendro/main.css
+++ b/static/css/dendro/main.css
@@ -1,6 +1,6 @@
 body {
 margin:0px;
-padding:20px;
+padding:40px;
 background-color:black;
 }
 .node circle {
